<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToeGame</string>
    <string name="action_settings">Settings</string>
    <string name="first_human">Inizia Tu.</string>  
    <string name="turn_human">Tocca a te.</string>  
    <string name="turn_computer">Tocca ad Android.</string>  
    <string name="result_tie"> Pareggio!</string>  
    <string name="result_human_wins">Hai Vinto questo turno!</string>  
    <string name="result_android_wins">Vince Android!</string>  
    <string name="one">1</string>  
    <string name="two">2</string>  
    <string name="three">3</string>  
    <string name="four">4</string>  
    <string name="five">5</string>  
    <string name="six">6</string>  
    <string name="seven">7</string>  
    <string name="eight">8</string>  
    <string name="nine">9</string>  
    <string name="info">Info</string>  
    <string name="human">Umano: </string>  
    <string name="ties">Pareggio: </string>  
    <string name="android">Android: </string>  
    <string name="contact_heading">Contact Info</string>  
    <string name="contact_info">  
      <b>Name:</b> Tchonin Paulin\n  
      <b>Email:</b> paulinpaulin007@gmail.com\n  
      <b>Phone:</b> mettere il telefono\n  
      <b>Website:</b> robot.unipv.it 
    </string>  
    <string name="about_heading">About</string>
    <string name="about_info">Questa applicazione ti permette di giocare
        al gioco TicTacToe contro il computer e di giocare anche online 
        con altri giocatori.  
    </string> 
    
    <!-- adesso per il menu-->
    <string name="newGame_label">Nuova Partita</string>  
    <string name="exitGame_label">Esci</string> 
    <string name="easy">Semplice</string>
    <string name="medium">Medio</string>
    <string name="difficult">Difficile</string> 
    <string name="online">Online</string>
    
    
     <!-- online -->
     <string name="player1">Inizia Tu</string>
     <string name="turn_player2">Tocca al player2.</string>  
     <string name="turn_player1">Tocca a te.</string> 
     <string name="result_player1_wins">Hai Vinto questo turno!</string>  
     <string name="result_player2_wins">Ha vinto il player2!</string>
     <string name="human1"> Player1: </string>  
     <string name="player2"> Player2: </string> 
     <string name="name_player1"> name player1 </string> 
     <string name="name_player2"> name player2 </string> 
     <string name="vs"> VS </string>
     <string name="insert_name"> Inserisci i nomi dei giocatori </string>
     <string name="verify"> incorrect name </string>
     
     
    

</resources>
