<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
   <item android:id="@+id/newGame" android:title="@string/newGame_label" android:icon="@android:drawable/ic_menu_add"></item>  
    <item android:id="@+id/exitGame" android:title="@string/exitGame_label" android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>  

    <item android:id="@+id/easy" android:title="@string/easy" android:icon="@android:drawable/ic_menu_add"></item>  
    <item android:id="@+id/medium" android:title="@string/medium" android:icon="@android:drawable/ic_menu_add"></item>  
    <item android:id="@+id/difficult" android:title="@string/difficult" android:icon="@android:drawable/ic_menu_add"></item>  
    <item android:id="@+id/online" android:title="@string/online" android:icon="@android:drawable/ic_menu_add"></item>  
    
     
    
</menu>
